fix checkboxes alignment

--- a/src/app/offers/search-tool/search-tool.component.scss
+++ b/src/app/offers/search-tool/search-tool.component.scss
@@ -73,7 +73,7 @@
             }
 
             &.additional-fields {
-                gap: 10px 5px;
+                gap: 10px 4px;
             }
 
             .checkbox-container {
